--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 body {
   padding: 20px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .nothing_to {
@@ -21,7 +21,8 @@ body {
   padding-left: 10px;
   padding-right: 10px;
 }
-.nav__left, .nav__right {
+.nav__left,
+.nav__right {
   display: flex;
   justify-content: space-around;
   gap: 20px;
@@ -36,20 +37,18 @@ body {
   display: grid;
   grid-template-columns: 10% 60% auto;
 }
-/* .task_to-do span, .task_to-do button {
-  display: inline-block;
-} */
 
-@media screen and (min-width: 768px){
+.nav__right span {
+  cursor: pointer;
+}
 
+@media screen and (min-width: 768px) {
   .list-group-item {
     grid-template-columns: 10% auto 15%;
   }
-  
 }
 
 @media screen and (min-width: 840px) {
-
   .container {
     width: 60%;
   }
@@ -57,5 +56,4 @@ body {
   .list-group-item {
     grid-template-columns: 5% auto 20%;
   }
-
 }
