--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,10 @@ body {
 @media screen and (min-width: 840px) {
   .container {
     width: 60%;
+    border: 0.5px solid rgba(153, 153, 153, 0.5);
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 20px;
   }
 
   .list-group-item {
